Added html_notes, updated CSS for <2>, updated link on index to point to html_notes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p>A list of HTML tags and their uses/restraints.</p>
 			<p><a href="css/css_cheatsheet.html"><h2>CSS Cheatsheet</h2></a></p>
 			<p>A list of CSS modifiers along with properties and values.</p>
-			<p><a href="holding.html"><h2>HTML Notes</h2></a></p>
+			<p><a href="html/html_notes.html"><h2>HTML Notes</h2></a></p>
 			<p>Notes on HTML taken throughout learning consolidated into one place.</p>
 			<p><a href="holding.html"><h2>CSS Notes</h2></a></p>
 			<p>Notes on CSS taken throughout learning consolidated into one place.</p>
