--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     </head>
     <body>
             <div class="main_title">
-            <h1>Web Developer Learning Journal</h1>
-            <p><h4>The following is a both an excersize as well as a resource into how to program HTML and CSS. Might be updated to add some Javascript a bit later on depending on whether I feel it is necessary.</h4>
-            </p>
-        </div>
+            <h1>Web Development Notes</h1>
+            </div>
+            <div class="sub_title">
+                <h4>The Odin Project notes by Liam Walker</h4>
+            </div>
 		<div class="nav">
-			<p><a href="html/html_cheatsheet.html"><h2>HTML Cheatsheet</h2></a></p>
-			<p>A list of HTML tags and their uses/restraints.</p>
-			<p><a href="css/css_cheatsheet.html"><h2>CSS Cheatsheet</h2></a></p>
-			<p>A list of CSS modifiers along with properties and values.</p>
-			<p><a href="html/html_notes.html"><h2>HTML Notes</h2></a></p>
-			<p>Notes on HTML taken throughout learning consolidated into one place.</p>
-			<p><a href="holding.html"><h2>CSS Notes</h2></a></p>
-			<p>Notes on CSS taken throughout learning consolidated into one place.</p>
-		</div>
+            <ul>
+                <li><a href="index.html"><h2>Home</h2></a></li>
+		        <li><a href="html/html_cheatsheet.html"><h2>HTML Cheatsheet</h2></a></li>
+		        <li><a href="css/css_cheatsheet.html"><h2>CSS Cheatsheet</h2></a></li>
+		        <li><a href="html/html_notes.html"><h2>HTML Notes</h2></a></li>
+                <li><a href="holding.html"><h2>CSS Notes</h2></a></li>
+            </ul>
+			</div>
     </body>
 </html>
